--- a/src/Page/Payment/Payment.module.css
+++ b/src/Page/Payment/Payment.module.css
@@ -43,6 +43,14 @@
   background-color: var(--primary-shade);
 }
 
+.loading {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  justify-content: center;
+  color: rgb(52, 52, 52);
+}
+
 @media (max-width: 768px) {
   .flex {
     flex-direction: column;
